--- a/DZ5/Homework5/ForecastUI/MainWindow.xaml
+++ b/DZ5/Homework5/ForecastUI/MainWindow.xaml
@@ -35,17 +35,17 @@
             FontSize="18"
             TextAlignment="Right"
             Text="Enter city: "/>
-        
 
-            <TextBox  x:Name="SearchCity" 
+
+        <TextBox  x:Name="SearchCity" 
                 Width="250"
                      Height="40"
                  VerticalContentAlignment="Center"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Margin="150,25,0,0"
-                 Grid.Column="1" Grid.RowSpan="5" Text=""
-                 Style="{StaticResource RoundedTextbox}"/>
+                 Grid.Column="1" Grid.RowSpan="5" Text=""/>
+        <!--<Style="{StaticResource RoundedTextbox}"/>-->
 
         <Button Name="SaveTask"
                 Width="100"
@@ -156,21 +156,6 @@
                     Height="25"
                     Width="60"
                     Margin="400,197,0,0"/>
-
-       
-
-            <!--<Grid.Background>
-            <ImageBrush ImageSource="\Faks\3.semestar\Objektno orijentirano prog\Weather/weatherSimbols.png" Stretch="UniformToFill"/>
-            <ImageBrush ImageSource="/path/to/weatherSimbols.png" Stretch="UniformToFill"/> 
-        </Grid.Background>-->
-
-            <!--<Border Height="300" Width="300" Background="Gray">
-            <Image Stretch="Fill" />
-            
-            <Grid Background="LightGreen" Margin="0,0,0.4,0.4">
-
-            </Grid>
-        </Border>-->
 
             
 
